# bloodbank_rl

./: .gitignore  MLproject  README.md  environment.yaml  pyproject.toml
bloodbank_rl/baseline_agents/: baseline_agents.py
bloodbank_rl/environments/: platelet_bankSR.py  simple_platelet_bank.py
bloodbank_rl/models/: fc_dqn.py
bloodbank_rl/pyomo_models/: model_constructors.py  model_constructors_nonweekly.py  stochastic_model_runner.py
bloodbank_rl/pyomo_scripts/: myriad-jobscript.sh  run_pyomo_smilp.py
bloodbank_rl/pyomo_scripts/conf/: config.yaml
bloodbank_rl/pyomo_scripts/conf/demand_provider_kwargs/: 2015_2016_real_demand.yaml
bloodbank_rl/pyomo_scripts/myriad_jobscripts/: myriad_jobscript_sQ.sh  myriad_jobscript_sQ_weekly.sh  myriad_jobscript_sS.sh  myriad_jobscript_sS_weekly.sh  myriad_jobscript_sSaQ.sh  myriad_jobscript_sSaQ_weekly.sh  myriad_jobscript_sSbQ.sh  myriad_jobscript_sSbQ_weekly.sh
bloodbank_rl/pyomo_scripts/myriad_jobscripts/non_weekly/: myriad_jobscript_sSaQ.sh  myriad_jobscript_sSbQ.sh
bloodbank_rl/pyomo_scripts/myriad_jobscripts/non_weekly_without_additional_fifo/: myriad_jobscript_sQ.sh  (+3 more)
bloodbank_rl/q_iteration/: run_qiteration.py  run_qiteration_jax.py
bloodbank_rl/q_iteration/conf/: config.yaml
bloodbank_rl/rl_training/a2c/: train_a2c.py
bloodbank_rl/rl_training/dqn/: train_dqn.py
bloodbank_rl/rl_training/ppo/: train_ppo.py
bloodbank_rl/sb3_utils/: callbacks.py  mlflow_logger.py
bloodbank_rl/tianshou_utils/: exploration.py  logging.py  models.py  policies.py
bloodbank_rl/training/: config.yaml  run_dqn.py
(+40 files in other folders)
