[tool.poetry]
name = "bloodbank_rl"
version = "0.0.1dev"
description = "Applying reinforcement learning to managing blood product inventory"
authors = ["Joe Farrington <farrington.joe@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "bloodbank_rl"}]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^1.13.1"
numpy = "^1.20.1"
scipy = "^1.6.0"
pandas = "^1.2.2"
gym = "^0.18.0"
torch = "^1.7.1"
torchvision = "^0.8.2"
hydra-core = "^1.0.6"
simpy = "^4.0.1"
matplotlib = "^3.4.2"
stable-baselines3 = {extras = ["extra"], version = "^1.1.0"}
pyglet = "1.5.11"
ray = {extras = ["rllib"], version = "^1.4.1"}
ipyparams = "^0.2.1"
ipynbname = "^2021.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.6.0"
black = "^20.8b1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
